# image-metadata-editor

./: .gitignore  README.md  main.py  pyproject.toml
src/image_metadata_editor/: main.py
src/image_metadata_editor/api/: __init__.py  images.py  metadata.py
src/image_metadata_editor/metadata/: __init__.py  models.py  reader.py  writer.py
src/image_metadata_editor/ui/: index.html
tests/: test_reader.py  test_writer.py
