[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-metadata-editor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "pillow>=11.0.0",
    "piexif>=1.1.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
